fix issue: On mobiles, page updates when scrolling down

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     background-size: cover;
 }
 
+html,
+body {
+    overscroll-behavior-y: contain;
+}
+
 #puzzle-container{
     position: absolute;
     width: 300px;
